recursion.logo.lessons.recursion.logo.koch.Koch.scala.error
Koch:13: error: value += is not a member of Int
  levels+=1
        ^