recursion.logo.lessons.recursion.logo.koch.Koch.scala.code
def snowFlake (levels:Int, length:Double) {
    snowSide(levels, length);
    right(120);
    setColor(Color.blue);
    snowSide(levels, length);
    right(120);
    setColor(Color.orange);
    snowSide(levels, length);
    right(120);
}
def snowSide(levels:Int, length:Double) {
  
  levels+=1
  if (levels ==0) {
    avance(length)
  }
  
  snowSide(levels-1,length/3)
  gauche(60)
  snowSide(levels,length/3)
  droite(120)
  snowSide(levels,length/3)
  gauche(60)
  snowSide(levels,length/3)
}